cassandra views added
