# services/Logger.API/routes/errorLogger.js
@@ -3,8 +3,6 @@ var router = express.Router();
 
 const ErrorLoggerController = require('../controllers/errorLogger');
 
-router.get('/', ErrorLoggerController.getErrorLogs);
-
 router.post('/', ErrorLoggerController.addErrorLog);
 
 router.put('/', ErrorLoggerController.updateErrorLog);
@@ -12,5 +10,7 @@ router.put('/', ErrorLoggerController.updateErrorLog);
 router.delete('/:id', ErrorLoggerController.deleteErrorLog);
 
 router.get('/:id', ErrorLoggerController.getErrorLogById);
+
+router.get('/findByEnvironment/:environment', ErrorLoggerController.getErrorLogByEnvironment);
 
 module.exports = router;
